# pantheon

./: .gitignore  Makefile  README.md  documentation.md
services/aegis/: .pre-commit-config.yaml  IMPLEMENTATION.md  MVP_VALIDATION.md  Makefile  README.md  WORK_SUMMARY.md  install.sh  pyproject.toml  run.sh
services/aegis/.github/workflows/: aegis-scan.yml
services/aegis/docs/: DECISIONS.md
services/aegis/src/aegis/: __init__.py  cli.py  models.py  repositories.py
services/aegis/src/aegis/adapters/: events.py  mongo_repository.py
services/aegis/src/aegis/scanners/: __init__.py  base.py  black_scanner.py  ruff_scanner.py  secrets_scanner.py
services/aegis/tests/: test_cli.py  test_events.py  test_models.py  test_repositories.py
services/atlasforge/: .gitignore  FEATURE_ANALYSIS.md  IMPLEMENTATION.md  MODULES_IMPLEMENTATION.md  Makefile  README.md  WORK_SUMMARY.md  install.sh  pyproject.toml
services/atlasforge/src/atlasforge/: __init__.py  __main__.py
services/atlasforge/src/atlasforge/application/dtos/: __init__.py
services/atlasforge/src/atlasforge/application/use_cases/: generate_project.py
services/atlasforge/src/atlasforge/domain/entities/: generation_result.py  module.py  project_spec.py  template_manifest.py
services/atlasforge/src/atlasforge/domain/exceptions/: base.py  generation.py  upgrade.py  validation.py
services/atlasforge/src/atlasforge/domain/ports/: __init__.py  checksum_port.py  filesystem_port.py  manifest_repository_port.py  module_port.py  template_engine_port.py
services/atlasforge/src/atlasforge/domain/services/: __init__.py  conflict_detector.py  module_resolver.py
services/atlasforge/src/atlasforge/domain/value_objects/: __init__.py  checksum.py  file_path.py  module_name.py  project_name.py  template_version.py
services/atlasforge/src/atlasforge/infrastructure/checksum/: __init__.py  sha256_checksum.py
services/atlasforge/src/atlasforge/infrastructure/filesystem/: local_filesystem_adapter.py
services/atlasforge/src/atlasforge/infrastructure/integrations/: __init__.py
services/atlasforge/src/atlasforge/infrastructure/modules/: __init__.py  module_loader.py
services/atlasforge/src/atlasforge/infrastructure/persistence/: json_manifest_repository.py
services/atlasforge/src/atlasforge/infrastructure/templating/: jinja2_engine.py
services/atlasforge/src/atlasforge/presentation/: __init__.py
services/atlasforge/src/atlasforge/presentation/cli/: main.py
services/atlasforge/src/atlasforge/templates/base/: template.yaml
services/atlasforge/src/atlasforge/templates/base/project/: .gitignore  Dockerfile.j2  README.md.j2  pyproject.toml.j2
services/atlasforge/src/atlasforge/templates/modules/auth/: module.yaml
services/atlasforge/src/atlasforge/templates/modules/events/: module.yaml
services/atlasforge/src/atlasforge/templates/modules/jobs/: module.yaml
services/atlasforge/src/atlasforge/templates/modules/mongo/: module.yaml
services/atlasforge/src/atlasforge/templates/modules/otel/: module.yaml
services/atlasforge/tests/: __init__.py  conftest.py
services/atlasforge/tests/integration/: test_full_generation.py  test_module_generation.py
services/atlasforge/tests/unit/domain/: test_checksum.py  test_file_path.py  test_module_name.py  test_project_name.py  test_template_version.py
services/atlasforge/tests/unit/infrastructure/: test_module_loader.py
services/eyeofhorusops/: README.md  pyproject.toml  requirements.txt
services/eyeofhorusops/src/eyeofhorusops/: __init__.py
services/eyeofhorusops/src/eyeofhorusops/application/: health.py  incidents.py  logs.py  runbooks.py  service_registry.py
services/eyeofhorusops/src/eyeofhorusops/domain/: contracts.py  entities.py
services/eyeofhorusops/src/eyeofhorusops/infrastructure/: in_memory.py  observability.py
services/eyeofhorusops/src/eyeofhorusops/infrastructure/logs/: loki.py
services/eyeofhorusops/src/eyeofhorusops/infrastructure/persistence/: mongo.py
services/eyeofhorusops/src/eyeofhorusops/presentation/api/: main.py
services/eyeofhorusops/tests/: test_adapters.py  test_core.py
services/mnemosyne/: README.md  pyproject.toml  requirements.txt
services/mnemosyne/src/mnemosyne/application/use_cases/: ingest.py  reprocess.py  search.py
services/mnemosyne/src/mnemosyne/domain/: contracts.py
services/mnemosyne/src/mnemosyne/domain/entities/: models.py
services/mnemosyne/src/mnemosyne/infrastructure/: observability.py
services/mnemosyne/src/mnemosyne/infrastructure/indexing/: __init__.py  mongo_index.py  simple_index.py
services/mnemosyne/src/mnemosyne/infrastructure/persistence/: __init__.py  in_memory.py  mongo.py  repository.py
services/mnemosyne/src/mnemosyne/infrastructure/storage/: __init__.py  s3.py
services/mnemosyne/src/mnemosyne/presentation/api/: main.py
services/mnemosyne/tests/: conftest.py  test_api.py  test_pipeline.py
(+123 files in other folders)
