[tool.poetry]
name = "eyeofhorusops"
version = "0.1.0"
description = "EyeOfHorusOps - camada de observabilidade e operação centralizada"
authors = ["Atlas Platform <noreply@example.com>"]
package-mode = true
readme = "README.md"
packages = [{include = "eyeofhorusops", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.0"
uvicorn = {version = "^0.30.0", optional = true}
httpx = "^0.27.0"
pymongo = "^4.7.2"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-otlp = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
